# datex-native

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.rs  example-config-client.dx  example-config-remote.dx  example-config-server.dx  example-config.dx  install.sh
.cargo/: config.toml.example
.github/tools/: version-bump.ts
.github/workflows/: create-release.yml  deploy-example.yml  nightly.yml  publish-dry-run.yml  publish.yml  release.yml  test-datex-cli.yml  test-datex-native.yml  version-bump.yml
crates/datex/: Cargo.toml  README.md
crates/datex-cli/: Cargo.toml  build.rs  repl.rs
crates/datex-cli/src/: lib.rs  repl.rs
crates/datex-cli/src/utils/: config.rs
crates/datex-cli/src/workbench/: workbench.rs
crates/datex-cli/src/workbench/views/: comhub.rs  mod.rs
crates/datex-cli/workbench/: mod.rs
crates/datex-cli/workbench/views/: metadata.rs
crates/datex-native/: .gitignore  Cargo.toml  README.md
crates/datex-native-macros/: Cargo.toml  README.md
crates/datex-native-macros/src/: lib.rs
crates/datex-native/src/: lib.rs
crates/datex-native/src/com_interfaces/: mod.rs
crates/datex-native/src/com_interfaces/http/: http_client.rs  http_server.rs  mod.rs
crates/datex-native/src/com_interfaces/serial/: mod.rs  serial_client.rs
crates/datex-native/src/com_interfaces/tcp/: mod.rs  tcp_client.rs  tcp_server.rs
crates/datex-native/src/com_interfaces/webrtc/: mod.rs  test.rs  webrtc.rs
crates/datex-native/src/com_interfaces/websocket/: mod.rs  websocket_client.rs  websocket_server.rs
crates/datex/src/: lib.rs
src/: command_line_args.rs  lib.rs  main.rs  repl.rs
src/lsp/: mod.rs  type_hint_collector.rs  utils.rs  variable_declaration_finder.rs
src/utils/: config.rs  paths.rs
src/workbench/views/: comhub.rs
