[package]
name = "datex"
description = "The DATEX native libary."
authors = [
    "Benedikt Strehle <benedikt@unyt.org>",
    "Jonas Strehle <jonas@unyt.org>",
]
license = "MIT"
version = "0.0.9"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "datex"
path = "src/main.rs"

[dependencies]
datex-native = { path = "./crates/datex-native", version = "0.0.9" }
datex-native-macros = { path = "./crates/datex-native-macros", version = "0.0.9" }
datex-cli = { path = "./crates/datex-cli", version = "0.0.9" }

tokio = { version = "1.17.0", features = ["full"] }

[build-dependencies]
serde_json = "1.0.145"
