[package]
name = "datex-cli"
description = "The standalone DATEX CLI"
authors = [
    "Benedikt Strehle <benedikt@unyt.org>",
    "Jonas Strehle <jonas@unyt.org>",
]
license = "MIT"
version = "0.0.9"
edition = "2024"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.0.23", features = ["derive"] }
datex-core = { git = "https://github.com/unyt-org/datex-core", branch = "refactor/update-loop", version = "0.0.8", default-features = false, features = ["std", "decompiler", "compiler", "lsp_tokio"] }
datex-native = { path = "../datex-native", version = "0.0.9" }

tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rustyline = "15.0.0"
ratatui = "0.29.0"
crossterm = "0.28.1"
home = "0.5.11"
serde_json = "1.0.145"


[build-dependencies]
serde_json = "1.0.145"