[package]
name = "datex-cli"
description = "The standalone DATEX CLI"
authors = [
    "Benedikt Strehle <benedikt@unyt.org>",
    "Jonas Strehle <jonas@unyt.org>",
]
license = "MIT"
version = "0.0.9"
edition = "2024"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.0.23", features = ["derive"] }
datex-core = { version = "0.0.9", default-features = false, features = [
    "target_native",
    "decompiler",
    "syntax_highlighting_legacy",
    "compiler",
    "lsp_tokio",
    "allow_unsigned_blocks",
] }
datex-native = { path = "../datex-native", version = "0.0.9" }

tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rustyline = "15.0.0"
ratatui = "0.29.0"
crossterm = "0.28.1"
home = "0.5.11"
serde_json = "1.0.145"
flexi_logger = "0.31.8"
colored = "3.1.1"


[build-dependencies]
serde_json = "1.0.145"
