[package]
name = "datex-native-macros"
version = "0.0.8"
description = "DATEX Native Macros"
authors = [
    "Benedikt Strehle <benedikt@unyt.org>",
    "Jonas Strehle <jonas@unyt.org>",
    "Norbert Brzezinski <norbert@unyt.org>"
]
edition = "2024"
license-file = "LICENSE"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
datex = { path = "../datex", version = "0.0.8" }