[package]
name = "datex-native-macros"
version = "0.0.1"
description = "DATEX Native Macros"
authors = [
    "Benedikt Strehle <benedikt@unyt.org>",
    "Jonas Strehle <jonas@unyt.org>",
    "Norbert Brzezinski <norbert@unyt.org>",
]
edition = "2024"
license-file = "LICENSE"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }

datex-core = { version = "0.0.10", default-features = false, features = [
    "target_native",
    "syntax_highlighting_legacy",
    "compiler",
] }
