[package]
name = "datex-native"
version = "0.0.10"
description = "DATEX Native Extensions"
authors = [
    "Benedikt Strehle <benedikt@unyt.org>",
    "Jonas Strehle <jonas@unyt.org>",
    "Norbert Brzezinski <norbert@unyt.org>",
]
edition = "2024"
license-file = "LICENSE"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
datex-core = { version = "0.0.9", default-features = false, features = [
    "target_native",
    "decompiler",
    "syntax_highlighting_legacy",
    "compiler",
    "allow_unsigned_blocks",
] }

ed25519 = { version = "2.2.3", features = ["std"] }
futures-util = { version = "0.3" }
futures = { version = "0.3" }
tokio = { version = "1.43.0" }
serde = { version = "1.0.219" }
ntest_timeout = "0.9.3"
log = { version = "0.4", features = ["serde"] }
url = { version = "2.5.7" }
flexi_logger = { version = "0.31.2" }

async_tiny = { version = "0.4.0", optional = true }
tokio-tungstenite = { version = "0.21.0", optional = true, features = [
    "native-tls",
] }
tungstenite = { version = "0.21.0", optional = true }
reqwest = { version = "0.13.1", optional = true }
serialport = { version = "4.7.1", optional = true }


[features]
http = ["dep:async_tiny", "dep:reqwest"]
websocket = ["dep:tokio-tungstenite", "dep:tungstenite"]
serial = ["dep:serialport"]
tcp = []


default = ["http", "websocket", "serial", "tcp"]
